# radionuclide_dosimetry

./: .gitignore  CMakeLists.txt  README.md  main.cc
DICOMconverter/: dcmtotxt.py  hu.py  txttoroot.cc
include/: Analysis.hh  DetectorConstruction.hh  EventAction.hh  Parameters.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  VoxelHit.hh  VoxelSD.hh
macro/: run.mac  vis.mac
read/: dosemap_vis.py  read_dose.cc  read_relSEM.cc  relsem_vis.py
src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  VoxelHit.cc  VoxelSD.cc
